# swarm

./: .gitignore  README.md  chat_history.json  test_file.txt  test_result.txt
.devcontainer/: Dockerfile  README.md  build-image.bat  devcontainer.json  run-container.bat
Hardware/PCB/: PCB.eprj  PCB.eprj2  PCB.eprj_backup  封装库.elib
Software/Hive_control_ROS/src/AI/: CMakeLists.txt  package.xml
Software/Hive_control_ROS/src/AI/scripts/: PROJECT_STRUCTURE.md  README.md  ai_assistant.py
Software/Hive_control_ROS/src/AI/scripts/Data/: plc_program_toggle.st
Software/Hive_control_ROS/src/AI/scripts/module/AICore/: AIManager.py  __init__.py
Software/Hive_control_ROS/src/AI/scripts/module/AICore/Model/: Kiimi.py  __init__.py  deepseek.py  doubao.py  qwen.py  xinhuo.py
Software/Hive_control_ROS/src/AI/scripts/module/AICore/Tool/: ConfigValidator.py  HistoryManager.py  OPEN_AI.py  __init__.py
Software/Hive_control_ROS/src/AI/scripts/module/AICore/role/: config.json  secret_key.json  user.JSON
Software/Hive_control_ROS/src/AI/scripts/module/AICore/role/role_A/: assistant.json  history.JSON
Software/Hive_control_ROS/src/AI/scripts/module/AICore/role/role_B/: assistant.json  history.json
Software/Hive_control_ROS/src/AI/scripts/module/Agent/: Agent.py  __init__.py
Software/Hive_control_ROS/src/AI/scripts/module/MCP/client/: MCPClient.py
Software/Hive_control_ROS/src/AI/scripts/module/MCP/server/: MCPServer.py
Software/Hive_control_ROS/src/AI/scripts/module/MCP/server/Tools/: DataInquire.py  DatabaseEditor.py  FileEditor.py  TaskManager.py  WorkspaceManager.py  __init__.py  mathematics.py
Software/Hive_control_ROS/src/AI/scripts/test/: debug_tool_type.py  test_dialogue_vs_tool.py  test_new_mcp_tools.py  test_openai_to_mcp.py  test_role_parameter.py  use_external_mcp.py
Software/Hive_control_ROS/src/AI/scripts/tools/: AllEventsHandler.py  __init__.py  log.py
Software/Hive_control_ROS/src/AI/scripts/window/: README.md  app.py  启动配置管理.bat
Software/Hive_control_ROS/src/AI/scripts/window/templates/: index.html
Software/Hive_control_ROS/src/data_center/: CMakeLists.txt  package.xml
Software/Hive_control_ROS/src/data_center/include/Datacore/: Datacore.h  models.hxx
Software/Hive_control_ROS/src/data_center/src/: main.cpp
Software/Hive_control_ROS/src/gazebo_simulator/: CMakeLists.txt  package.xml
Software/Hive_control_ROS/src/message_manager/: CMakeLists.txt  package.xml
Software/Hive_control_ROS/src/message_manager/data/: hive.db
Software/Hive_control_ROS/src/message_manager/launch/: udp_ros_bridge.launch
Software/Hive_control_ROS/src/message_manager/src/: main.cpp
Software/Hive_control_ROS/src/message_manager/src/Datacore/: Datacore.hpp
Software/Hive_control_ROS/src/message_manager/src/data_processing/: data_processing.cpp  data_processing.h
Software/Hive_control_ROS/src/message_manager/src/network/: serve.cpp  serve.hpp
Software/Hive_control_ROS/src/message_manager/src/tool/: Logger.cpp  Logger.hpp
Software/Hive_control_ROS/src/message_manager/test/: run_logger_test.sh  run_test.sh  test_leveldb.cpp  test_logger.cpp  test_mqtt_client.cpp  test_soci_mysql.cpp
Software/Hive_control_ROS/src/mic/: CMakeLists.txt  package.xml
Software/Hive_control_ROS/src/mqtt_mesh_bridge/include/mqtt_mesh_bridge/: MQTTMeshNode.h
Software/Hive_control_ROS/src/swarm_gui_monitor/: CMakeLists.txt  package.xml
Software/Hive_control_ROS/src/swarm_planner/src/: main.cpp
Software/Hive_control_ROS/src/udp_ros_bridge/src/: SnowflakeIdGenerator.cpp  SnowflakeIdGenerator.h  main.cpp
Software/Hive_control_ROS/src/udp_ros_bridge/src/UDP/: UDP.h
Software/Hive_control_ROS/src/voice/: CMakeLists.txt  README.md  package.xml
Software/Hive_control_ROS/src/voice/launch/: voice.launch
Software/Hive_control_ROS/src/voice/scripts/: test_audio.py
Software/Hive_control_ROS/src/voice/src/: main.cpp
Software/Hive_control_ROS/src/voice/src/asr/: ASR.cpp  ASR.h
Software/Hive_control_ROS/src/voice/src/audio/capture/: AudioCapture.cpp  AudioCapture.h
Software/Hive_control_ROS/src/voice/src/audio/process/: AudioProcess.cpp  AudioProcess.h
Software/Hive_control_ROS/src/voice/src/config/: engine_config.json  secret_key.json  voice_config.json
Software/Hive_control_ROS/src/voice/src/serve/: VoiceService.cpp  VoiceService.h
Software/Hive_control_ROS/src/voice/src/tts/: TTS.cpp  TTS.h
Software/Hive_control_ROS/src/voice/src/wakeword/: WakeWordDetector.cpp  WakeWordDetector.h
Software/Hive_control_ROS/环境/: ch9102_udev.sh  robot.sh  test_vosk.py
Software/UAV_ESP/: .clangd
Software/UAV_ESP/Hardware/ADC/: ADC.cpp  ADC.h
Software/UAV_ESP/Hardware/BMP280/: BMP280.cpp  BMP280.h
Software/UAV_ESP/Hardware/GPS/: GPS.cpp  GPS.h
Software/UAV_ESP/Hardware/I2Cdev/: CMakeLists.txt  I2Cdev.cpp  I2Cdev.h
Software/UAV_ESP/Hardware/MPU6050/: CMakeLists.txt  MPU6050.cpp  MPU6050.h  MPU6050_6Axis_MotionApps20.h  MPU6050_9Axis_MotionApps41.h  helper_3dmath.h
Software/UAV_ESP/Hardware/OLED/: OLED.cpp  OLED.h
Software/UAV_ESP/Hardware/QMC5883L/: QMC5883L.cpp  QMC5883L.h
Software/UAV_ESP/Hardware/TIME/: TIME.cpp  TIME.h
Software/UAV_ESP/Hardware/UDP/: UDP.cpp  UDP.h
Software/UAV_ESP/Hardware/control/: control.cpp  control.h
Software/UAV_ESP/System/PID/: PID.cpp  PID.h
Software/UAV_ESP/System/delay/: delay.cpp  delay.h
Software/UAV_ESP/System/sys/: sys.cpp  sys.h  sys_err.h
Software/UAV_ESP/main/: CMakeLists.txt  main.cpp  main.h
Software/UAV_ESP/main/task_MPU6050/: task_MPU6050.cpp  task_MPU6050.h
Software/UAV_ESP/main/task_PID/: task_PID.cpp  task_PID.h
Software/UAV_ESP/main/task_UDP/: task_UDP.cpp  task_UDP.h
Software/UAV_ESP/main/task_UDP/ROS_DATA_RX/: ROS_DATA_RX.cpp  ROS_DATA_RX.h
Software/UAV_ESP/main/task_UDP/ROS_DATA_TX/: ROS_DATA_TX.cpp  ROS_DATA_TX.h
Software/UAV_ESP/main/task_attitude/: task_attitude.cpp  task_attitude.h
Software/UAV_ESP/test/: systick_delay_test.cpp
docs/: API参考.md  技术路线规划.md  部署指南.md
script/: coap_client.py  coap_observe.py  coap_server.py  requirements_coap.txt
(+15 files in other folders)
